test/sema/out_param/ptr_to_out_param.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
// CHECK: [[# @LINE + 1 ]]:12: error: cannot create pointer to '&' param
fn test(x: *&number) {}

// CHECK: [[# @LINE + 1 ]]:14: error: cannot create pointer to '&' param
fn test(x: ***&number) {}

fn main() {}
